namespace Mocoding.Ofx
{
    /// <summary>
    /// OFX Version Definitions.
    /// </summary>
    public enum OfxVersionEnum
    {
        /// <summary>
        /// The version1x
        /// </summary>
        Version1x = 1,

        /// <summary>
        /// The version2x
        /// </summary>
        Version2x = 2,
    }
}